syntax = "proto3";

package characters;

// Importing the standard timestamp type
import "google/protobuf/timestamp.proto";

// Service definition for Character operations
service CharacterService {
  // Fetch a list of characters
  rpc FetchCharacters(FetchCharactersRequest) returns (CharacterList);
}

// Request for fetching characters
message FetchCharactersRequest {
  string token = 1;  // Add token to the request
  // Optional filters
  string name = 2;
  string nameStartsWith = 3;
  // 'modifiedSince' should be in one of the following formats:
  // 1. Full timestamp with timezone: "yyyy-MM-dd'T'HH:mm:ssZ" (e.g., "2024-12-06T15:30:00+0000")
  // 2. Date-only format: "yyyy-MM-dd" (e.g., "2024-12-06")
  // If not provided, the default behavior will be to fetch all records.
  string modifiedSince =43;
  int32 offset = 5; // Default 0
  int32 limit = 6;  // Default 5
}

// Individual character data
message Character {
  string marvelId = 1;
  string name = 2;
  string description = 3;
  string lastModified = 4;  // String format, e.g., "2024-12-05T00:00:00Z"
}

// Response containing a list of characters
message CharacterList {
  repeated Character characters = 1;
}